<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/quset1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/question_syria"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/buttonTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TrueValue"
            android:layout_margin="20dp"
            />

        <Button
            android:id="@+id/buttonFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FalseValue"
            android:layout_margin="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/QuestionPrev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_weight="1"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/QuestionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:layout_weight="1"
            android:layout_margin="20dp"/>

    </LinearLayout>

</LinearLayout>
